--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     85: "Snow showers slight",
                     86: "Snow showers heavy",
                     95: "Mild thunderstorm",
-                    96: "Thunderstorm with light hail",
-                    99: "Thunderstorm with heavy hail"
+                    96: "Light Thunderstorm",
+                    99: "Heavy Thunderstorm"
                 };
 
                 const currentDate = new Date().toISOString().split('T')[0];
