--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         async function fetchWeather() {
             try {
-                const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=6.4183&longitude=2.88132&hourly=temperature_2m,weathercode&timezone=auto&forecast_days=16&temperature_unit=fahrenheit');
+                const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=6.4183&longitude=2.88132&hourly=temperature_2m,weathercode&timezone=auto&forecast_days=16&temperature_unit=fahrenheit&past_days=1');
                 const data = await response.json();
 
                 if (!data.hourly || !data.hourly.temperature_2m || !data.hourly.weathercode) {
